src/OpenGl/OpenGl_Workspace.cxx
@@ -153,13 +153,13 @@ OpenGl_Workspace::OpenGl_Workspace (OpenGl_View* theView, const Handle(OpenGl_Wi
   #if !defined(GL_ES_VERSION_2_0)
     if (myGlContext->core11 != NULL)
     {
-      // Eviter d'avoir les faces mal orientees en noir.
-      // Pourrait etre utiliser pour detecter les problemes d'orientation
+      // enable two-side lighting by default
       glLightModeli ((GLenum )GL_LIGHT_MODEL_TWO_SIDE, GL_TRUE);
-
-      // Optimisation pour le Fog et l'antialiasing
-      glHint (GL_FOG_HINT,            GL_FASTEST);
-      glHint (GL_POINT_SMOOTH_HINT,   GL_FASTEST);
+      glHint (GL_POINT_SMOOTH_HINT, GL_FASTEST);
+      if (myGlContext->caps->ffpEnable)
+      {
+        glHint (GL_FOG_HINT, GL_FASTEST);
+      }
     }
 
     glHint (GL_LINE_SMOOTH_HINT,    GL_FASTEST);
@@ -197,7 +197,10 @@ Standard_Boolean OpenGl_Workspace::Activate()
   {
     myGlContext->core20fwd->glUseProgram (OpenGl_ShaderProgram::NO_PROGRAM);
   }
-  myGlContext->ShaderManager()->PushState (Handle(OpenGl_ShaderProgram)());
+  if (myGlContext->caps->ffpEnable)
+  {
+    myGlContext->ShaderManager()->PushState (Handle(OpenGl_ShaderProgram)());
+  }
   return Standard_True;
 }
 
